 4-Jun-2020  - V0.66 Add public bundle and unbundle tar file methods in FileUtil()
 5-Jun-2020  - V0.67 Add sftp client class SftpUtil() and tests.
 9-Jun-2020  - V0.68 Documentation updates and some additional pre-checks for path existence prior to copy operations.
19-Jun-2020  - V0.69 Exposing comment parsing methods in FastaUtil().
20-Jul-2020  - V0.70 Expose request timeout as a keyword argument for unwrapped requests.
20-Jul-2020  - V0.71 Further adjustments in logging and error handling
21-Jul-2020  - V0.72 Add module StashUtil() to simplify backup of and recovery of bundled directories of data
                     from remote storage resources.
22-Jul-2020  - V0.73 Adjust api nomenclature
22-Jul-2020  - V0.74 Create destination directory for tarfile unbundling
 1-Aug-2020  - V0.75 Add https protocol StashUtil.fetchBundle()
24-Aug-2020  - V0.76 Add module ProcessStatusUtil() and related tests.
19-Oct-2020  - V0.77 Adjust troubleshooting logging
26-Oct-2020  - V0.78 down version numpy to 1.18.0 to solve Py3.9 macos issue
26-Oct-2020  - V0.79 handle Py27 numpy limit in requirements
 2-Nov-2020  - V0.80 add gzip support to json deserialization method.
 9-Nov-2020  - V0.81 add zip unbundle method to FileUtil()
 9-Nov-2020  - V0.82 add stdin option in ExecUtil().run()
23-Nov-2020  - V0.83 add option to turn on SSL verification in requests() package
23-Nov-2020  - V0.84 add option to restore SSL3 ciphers to urlopen connections
24-Nov-2020  - V0.85 disable uniprot tests for now until cert/handshake issues to work with Ubuntu 20.20
 1-Dec-2020  - V0.86 add tagged Fasta comment style and option to synthesize fasta comments
 1-Dec-2020  - V0.87 adjust documemtation and upversion
 1-Dec-2020  - V0.88 update dependencies and pipeline
 1-Dec-2020  - V0.89 further output options for fasta files
 1-Dec-2020  - V0.90 Cast to string all components of fasta comment lines
 5-Dec-2020  - V0.91 Wrapped requests.Session() in a context manager.